# AcadoPi

./: .gitmodules  AcadoPi.cpp  CMakeLists.txt
acado_solver/: acado_auxiliary_functions.c
